0.5.4
 - add show_cursor config option (idea from Cheryl Homiak)
 - autoconf/automake update
 - replace abook_malloc, abook_realloc and my_free with new xmalloc routines

0.5.3
 - add allcvs filters (Christoph Sobotka)
 - removed a lefover debug message
 - fixed mutt import filter nickname cutoff
 - wrap searches
 - contrib updates

0.5.2
 - five custom fields added
 - experimental wide character support
 - fixed a crash bug in mutt filter
 - fixed errors in configure.in (especially snprintf-functions were incorrectly
   detected)
 - abookrc manual page update

0.5.1
 - sort by field command
 - duplicate item command
 - quit without saving command
 - autoconf/automake update
 - minor filter fixes
 - tried to fix \" quotation problem with mutt import filter
 - removed obsolete filesel_sort option from abookrc manual page
 - added bbdb2xx translator source to contrib

0.5.0
 - tried to work around some problems with readline
 - some documentation update
20030530
 - updated autoconf/automake
 - updated man page
 - pine import filter update
20021008
 - options.c rewritten (new mutt style rc file support)
 - palmcsv export filter (Koenraad Heijlen)
 - added a spec file for rpm support
 - added --with-readline configure option
 - merged newtab patch by Sinan Kaan Yerli
 - new option: add_email_prevent_duplicates
 - bugfixes
2002-03-11
 - readline support
 - abook can be compiled with g++
 - attempt to improve --datafile behavior
 - html filter update (Morten Brix Pedersen)
 - store rcfile and addressbook to .abook directory
2002-02-04
 - use getopt to parse command line (also new options added)
 - use strcoll instead of strcmp for sorting entries
 - html filter fix
 - bugfixes

0.4.17
 - fixed an annoying file creation bug

0.4.16
 - use strcoll instead of strcmp for sorting entries
 - html filter fix
 - many bugfixes

0.4.15
 - new options --add-email and --add-email-quiet
 - proper mutt alias import filter
 - editor update