@@ -2,6 +2,8 @@
  - add show_cursor config option (idea from Cheryl Homiak)
  - autoconf/automake update
  - replace abook_malloc, abook_realloc and my_free with new xmalloc routines
+ - update for abook_rl (abook_readline)
+ - code cleanups and minor fixes
 
 0.5.3
  - add allcvs filters (Christoph Sobotka)
